@@ -9,8 +9,9 @@ LEGEND
 
 ------
   [!] Added new plugin for notifications about birthdays
-  [-] XML parser did not correctly handle the elements with not declared prefixes, which caused to the breaking the connection
+  [+] Added ability to show a minimized window with the message when notification received
   [*] Notice of user activity in the chat duplicated on the chat tab
+  [-] XML parser did not correctly handle the elements with not declared prefixes, which caused to the breaking the connection
 
 
 v1.1.0
